--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BF7DCEF3"
+    android:background="#BF40C4FF"
     tools:context=".Chat">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_medium"
-        android:text="Contactos"
+        android:text="Amigos"
         android:textColor="#575757"
         android:textSize="30sp"
         android:textStyle="bold"
