--- a/app/src/main/res/layout/activity_rompe_cabezas.xml
+++ b/app/src/main/res/layout/activity_rompe_cabezas.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#BF40C4FF"
-    tools:context=".MainActivity">
+    tools:context=".RompeCabezas">
 
     <ImageView
         android:id="@+id/imageView"
@@ -21,20 +21,55 @@
         app:layout_constraintVertical_bias="0.55"
         app:srcCompat="@drawable/nubes" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksand_light"
-        android:text="T E C N O L O G Í A S   A K A R"
-        android:textSize="14sp"
-        android:textStyle="bold"
+    <GridView
+        android:id="@+id/grid"
+        android:layout_width="409dp"
+        android:layout_height="525dp"
+        android:layout_margin="8dp"
+        android:horizontalSpacing="10dp"
+        android:numColumns="3"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="10dp"
+        android:verticalSpacing="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.956" />
+
+        />
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
+       android:layout_marginEnd="16dp"
+       android:layout_marginBottom="16dp"
+       android:layout_width="wrap_content"
+       android:id="@+id/cameraButton"
+
+       android:layout_height="wrap_content"
+       android:clickable="true"
+       android:tint="@color/white"
+       android:onClick="onImageCameraClicked"
+       android:backgroundTint="@color/purple_200"
+       android:src="@drawable/ic_camera"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_width="wrap_content"
+        android:id="@+id/galleryButton"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:tint="@color/white"
+        android:onClick="onImageGalleryClicked"
+        android:backgroundTint="@color/purple_200"
+        android:src="@drawable/ic_gallery"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
+        />
+
+
+
 
     <TextView
         android:id="@+id/textView9"
@@ -51,92 +86,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.036" />
 
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="285dp"
-        android:layout_height="235dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.215"
-        app:srcCompat="@drawable/nemo" />
-
-    <ImageView
-        android:id="@+id/imageView16"
-        android:layout_width="90dp"
-        android:layout_height="86dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.648"
-        app:srcCompat="@drawable/pieza2" />
-
-    <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="95dp"
-        android:layout_height="75dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.903"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.648"
-        app:srcCompat="@drawable/pieza3" />
-
-    <ImageView
-        android:id="@+id/imageView17"
-        android:layout_width="90dp"
-        android:layout_height="86dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.833"
-        app:srcCompat="@drawable/pieza4" />
-
-    <ImageView
-        android:id="@+id/imageView20"
-        android:layout_width="88dp"
-        android:layout_height="84dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.832"
-        app:srcCompat="@drawable/pieza5" />
-
-    <ImageView
-        android:id="@+id/imageView21"
-        android:layout_width="77dp"
-        android:layout_height="77dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.869"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.834"
-        app:srcCompat="@drawable/pieza6" />
-
-    <ImageView
-        android:id="@+id/imageView19"
-        android:layout_width="90dp"
-        android:layout_height="86dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.648"
-        app:srcCompat="@drawable/pieza1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
